--- a/CompanyBrandChanger.csproj
+++ b/CompanyBrandChanger.csproj
@@ -5,6 +5,11 @@
 		<TargetFramework>net472</TargetFramework>
 		<Configurations>Debug;Release</Configurations>
 		<LangVersion>9</LangVersion>
+
+		<AssemblyName>CompanyBrandChanger</AssemblyName>
+		<AssemblyTitle>Company Brand Changer</AssemblyTitle>
+		<Version>1.0.0</Version>
+		<Authors>StarQ</Authors>
 		
 		<!--The file where mod information which is required for publishing mod on PDX mods are stored-->
 		<PublishConfigurationPath>Properties\PublishConfiguration.xml</PublishConfigurationPath>
@@ -13,6 +18,13 @@
 	<!--Imports must be after PropertyGroup block-->
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.props" />
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets" />
+
+	<ItemGroup>
+		<EmbeddedResource Include="Locale.json" />
+		<EmbeddedResource Include="Locale\*.json" />
+		<None Remove="Locale.json" />
+		<None Remove="Locale\*.json" />
+	</ItemGroup>
 
 	<Target Name="BuildUI" AfterTargets="AfterBuild">
 		<Exec Command="npm run build" WorkingDirectory="$(ProjectDir)/UI" />
@@ -78,6 +90,10 @@
 	<ItemGroup>
 		<None Include="$(ModPropsFile)" Link="Properties\Mod.props" />
 		<None Include="$(ModTargetsFile)" Link="Properties\Mod.targets" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Locale\" />
 	</ItemGroup>
 
 </Project>
