--- a/AdvancedBuildingManager.csproj
+++ b/AdvancedBuildingManager.csproj
@@ -3,9 +3,9 @@
 	<PropertyGroup>
 		<Configurations>Debug;Release</Configurations>
 
-		<AssemblyName>CompanyBrandChanger</AssemblyName>
-		<AssemblyTitle>Company Brand Changer</AssemblyTitle>
-		<Version>1.0.1</Version>
+		<AssemblyName>AdvancedBuildingManager</AssemblyName>
+		<AssemblyTitle>Advanced Building Manager</AssemblyTitle>
+		<Version>2.0.0</Version>
 		<Authors>StarQ</Authors>
 		
 		<!--The file where mod information which is required for publishing mod on PDX mods are stored-->
@@ -16,19 +16,12 @@
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.props" />
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets" />
 
-	<ItemGroup>
-		<EmbeddedResource Include="Locale.json" />
-		<EmbeddedResource Include="Locale\*.json" />
-		<None Remove="Locale.json" />
-		<None Remove="Locale\*.json" />
-	</ItemGroup>
-
-	<Target Name="BuildUI" AfterTargets="AfterBuild">
-		<Exec Command="npm run build" WorkingDirectory="$(ProjectDir)/UI" />
-	</Target>
 	
 	<ItemGroup>
 		<Reference Include="Game">
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="Colossal.Collections">
 			<Private>false</Private>
 		</Reference>
 		<Reference Include="Colossal.Core">
@@ -88,9 +81,20 @@
 		<None Include="$(ModPropsFile)" Link="Properties\Mod.props" />
 		<None Include="$(ModTargetsFile)" Link="Properties\Mod.targets" />
 	</ItemGroup>
+	
+	<ItemGroup>
+		<EmbeddedResource Include="Locale.json" />
+		<EmbeddedResource Include="Locale\*.json" />
+		<None Remove="Locale.json" />
+		<None Remove="Locale\*.json" />
+	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Locale\" />
 	</ItemGroup>
+
+	<Target Name="BuildUI" AfterTargets="AfterBuild">
+		<Exec Command="npm run build" WorkingDirectory="$(ProjectDir)/UI" />
+	</Target>
 
 </Project>
