--- a/AdvancedBuildingManager.csproj
+++ b/AdvancedBuildingManager.csproj
@@ -21,6 +21,9 @@
 		<Reference Include="Game">
 			<Private>false</Private>
 		</Reference>
+		<Reference Include="Colossal.AssetPipeline">
+			<Private>false</Private>
+		</Reference>
 		<Reference Include="Colossal.Collections">
 			<Private>false</Private>
 		</Reference>
@@ -28,6 +31,9 @@
 			<Private>false</Private>
 		</Reference>
 		<Reference Include="Colossal.Logging">
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="Colossal.PSI.Common">
 			<Private>false</Private>
 		</Reference>
 		<Reference Include="Colossal.IO.AssetDatabase">
